adding new structure

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-
+  <div>
+    <!-- <img src="assets/Eu.jpg" alt="imagem do dono da página de links"> -->
+    <h1>Thomas Fernando</h1>
+    <p>São Paulo, Brasil</p>
+  </div>
 </body>
 
 </html>
