Adding inter font

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 
@@ -12,6 +15,14 @@
     <!-- <img src="assets/Eu.jpg" alt="imagem do dono da página de links"> -->
     <h1>Thomas Fernando</h1>
     <p>São Paulo, Brasil</p>
+
+    <p>"Desenvolvedor Front-End viciado em amar."</p>
+
+    <a href="https://github.com/thomasdevsp">Github</a>
+    <a href="https://www.linkedin.com/in/thomas-sampaio/">Linkedin</a>
+    <a href="https://www.youtube.com/@izanagi2344">Youtube</a>
+    <a href="https://www.instagram.com/exe.izanagi/">Instagram</a>
+    <a href="https://twitter.com/exe_izanagi">Twitter</a>
   </div>
 </body>
 
