--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,26 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 
 <body>
-  <div>
-    <!-- <img src="assets/Eu.jpg" alt="imagem do dono da página de links"> -->
-    <h1>Thomas Fernando</h1>
-    <p>São Paulo, Brasil</p>
-
+  <div id="Div-container">
+    <img src="assets/Eu.jpg" alt="imagem do dono da página de links">
+    <div>
+      <h1>Thomas Fernando</h1>
+      <strong>São Paulo, Brasil</strong>
+    </div>
     <p>"Desenvolvedor Front-End viciado em amar."</p>
 
-    <a href="https://github.com/thomasdevsp">Github</a>
-    <a href="https://www.linkedin.com/in/thomas-sampaio/">Linkedin</a>
-    <a href="https://www.youtube.com/@izanagi2344">Youtube</a>
-    <a href="https://www.instagram.com/exe.izanagi/">Instagram</a>
-    <a href="https://twitter.com/exe_izanagi">Twitter</a>
+    <div>
+      <a href="https://github.com/thomasdevsp">Github</a>
+      <a href="https://www.linkedin.com/in/thomas-sampaio/">Linkedin</a>
+      <a href="https://www.youtube.com/@izanagi2344">Youtube</a>
+      <a href="https://www.instagram.com/exe.izanagi/">Instagram</a>
+      <a href="https://twitter.com/exe_izanagi">Twitter</a>
+    </div>
   </div>
 </body>
 
